router/apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__add_field.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "apply_migration(&source_doc(),\n        &Migration::builder().action(Action::Add {\n                            path: \"obj\".to_string(),\n                            name: \"field1\".to_string(),\n                            value: 25.into(),\n                        }).description(\"add field1\").build()).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field1": 1,
    "field2": 2
  },
  "arr": [
    "v1",
    "v2"
  ]
}
