router/apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__copy_array_element.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "apply_migration(&source_doc(),\n        &Migration::builder().action(Action::Copy {\n                            from: \"arr[0]\".to_string(),\n                            to: \"new.arr[0]\".to_string(),\n                        }).description(\"copy arr[0]\").build()).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field1": 1,
    "field2": 2
  },
  "arr": [
    "v1",
    "v2"
  ],
  "new": {
    "arr": [
      "v1"
    ]
  }
}
