router/apollo-router/src/configuration/snapshots/apollo_router__configuration__upgrade__test__move_field.snap
---
source: apollo-router/src/configuration/upgrade.rs
expression: "apply_migration(&source_doc(),\n        &Migration::builder().action(Action::Move {\n                            from: \"obj.field1\".to_string(),\n                            to: \"new.obj.field1\".to_string(),\n                        }).description(\"move field1\").build()).expect(\"expected successful migration\")"
---
{
  "obj": {
    "field2": 2
  },
  "arr": [
    "v1",
    "v2"
  ],
  "new": {
    "obj": {
      "field1": 1
    }
  }
}
